[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/UI/Buttons/Back Button.png" type="Texture" id=1]
[ext_resource path="res://scenes/menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/UI/Buttons/Settings Button.png" type="Texture" id=3]
[ext_resource path="res://art/UI/godot match 3 settings bar.png" type="Texture" id=4]
[ext_resource path="res://scripts/OldSettings.gd" type="Script" id=5]
[ext_resource path="res://art/UI/Buttons/Sound On Button.png" type="Texture" id=6]
[ext_resource path="res://art/UI/Buttons/Sound Off Button.png" type="Texture" id=7]
[ext_resource path="res://theme/pixel_theme.tres" type="Theme" id=8]

[node name="Settings" instance=ExtResource( 2 )]
script = ExtResource( 5 )
sound_on_texture = ExtResource( 6 )
sound_off_texture = ExtResource( 7 )

[node name="Graphic" parent="MarginContainer/VBoxContainer" index="0"]
texture = ExtResource( 4 )

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer" index="1"]
margin_bottom = 933.0

[node name="Button1" parent="MarginContainer/VBoxContainer/VBoxContainer" index="0"]
texture_normal = ExtResource( 3 )

[node name="Button2" parent="MarginContainer/VBoxContainer/VBoxContainer" index="1"]
texture_normal = ExtResource( 1 )

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/VBoxContainer" index="2"]
margin_top = 383.0
margin_right = 536.0
margin_bottom = 417.0
theme = ExtResource( 8 )
text = "Music"
icon_align = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
